--- a/.devcontainer/Devcontainer.json
+++ b/.devcontainer/Devcontainer.json
@@ -1,6 +1,12 @@
 {
   "name": "GitHub Pages with Claude Code",
   "image": "mcr.microsoft.com/devcontainers/javascript-node:1-20-bullseye",
+  
+  "features": {
+    "ghcr.io/devcontainers/features/git-lfs:1": {}
+  },
+  
   "postCreateCommand": "npm install -g npm@latest && npm install -g @anthropic-ai/claude-code",
+  
   "remoteUser": "node"
 }
